crates/stilyagi-markdown/src/snapshots/stilyagi_markdown__tests__paragraph_soft_break_crlf.snap
---
source: crates/stilyagi-markdown/src/lib.rs
expression: json
---
{
  "schema_version": "1.0.0",
  "document": {
    "uri": "file:///repo/tests/fixtures/corpus/markdown/valid/paragraph-soft-break-crlf.md.fixture",
    "path": "tests/fixtures/corpus/markdown/valid/paragraph-soft-break-crlf.md.fixture",
    "syntax": "markdown",
    "natural_language": "en",
    "encoding": "utf-8",
    "content_hash": "sha256:d6261268b61ea42c22676d979dd898d8d3ee3d4812c151e379715fcef326804a"
  },
  "producers": [
    {
      "kind": "markdown",
      "name": "markdown-rs",
      "version": "1.0.0",
      "options": {
        "frontmatter": true,
        "gfm": true
      }
    }
  ],
  "line_index": [
    0,
    17,
    35
  ],
  "trees": [
    {
      "id": "t0",
      "family": "mdast",
      "syntax": "markdown",
      "root": "n0"
    }
  ],
  "nodes": [
    {
      "id": "n0",
      "tree": "t0",
      "kind": "root",
      "parent": null,
      "children": [
        "n1"
      ],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 0,
        "byte_end": 35
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n1",
      "tree": "t0",
      "kind": "paragraph",
      "parent": "n0",
      "children": [
        "n2"
      ],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 0,
        "byte_end": 33
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n2",
      "tree": "t0",
      "kind": "text",
      "parent": "n1",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 0,
        "byte_end": 33
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    }
  ],
  "regions": [
    {
      "id": "r0",
      "kind": "paragraph",
      "scope": [
        "markdown",
        "paragraph"
      ],
      "syntax": "markdown",
      "natural_language": "en",
      "text": "First CRLF line second CRLF line",
      "segments": [
        {
          "text_start": 0,
          "text_end": 15,
          "source": {
            "byte_start": 0,
            "byte_end": 15
          },
          "synthetic": null,
          "node": "n1",
          "text": "First CRLF line"
        },
        {
          "text_start": 15,
          "text_end": 16,
          "source": null,
          "synthetic": "softbreak_space",
          "node": null,
          "text": " "
        },
        {
          "text_start": 16,
          "text_end": 32,
          "source": {
            "byte_start": 17,
            "byte_end": 33
          },
          "synthetic": null,
          "node": "n1",
          "text": "second CRLF line"
        }
      ],
      "origin_nodes": [
        "n1"
      ],
      "owner": null,
      "attrs": {},
      "parent_region": null
    }
  ],
  "suppressions": [],
  "errors": [],
  "metadata": {}
}
